--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
+    <script src="JS/Game.js"></script>
+    <script src="JS/form.js"></script>
+    <script src="JS/player.js"></script>
     <script src="p5.play.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
